@@ -23,9 +23,9 @@ Documentation=man:monit(1) https://mmonit.com/wiki/Monit/HowTo
 [Service]
 Type=simple
 KillMode=process
-ExecStart=@prefix@/bin/monit -I -c @sysconfdir@/monitrc
-ExecStop=@prefix@/bin/monit -c @sysconfdir@/monitrc quit
-ExecReload=@prefix@/bin/monit -c @sysconfdir@/monitrc reload
+ExecStart=@prefix@/bin/monit -I
+ExecStop=@prefix@/bin/monit quit
+ExecReload=@prefix@/bin/monit reload
 Restart=on-abnormal
 StandardOutput=null
 
