@@ -23,6 +23,6 @@ stop on starting rc RUNLEVEL=[016]
 expect daemon
 respawn
 
-exec @prefix@/bin/monit -c @sysconfdir@/monitrc
+exec @prefix@/bin/monit
 
-pre-stop exec @prefix@/bin/monit -c @sysconfdir@/monitrc quit
+pre-stop exec @prefix@/bin/monit quit
