@@ -9,6 +9,10 @@ by monit, AssertException was thrown. Monit will report normal error instead of 
 
 Fixed: Issue #966: Service name pattern for CLI commands was case-sensitive in 5.28.0.
 
+Fixed: Issue #968: The systemd and upstart templates used to set the path to the configuration file in the sysconfdir,
+which is optionally set during the compilation. That path wasn't fully expanded. The template now doesn't specify the
+explicit path and lets monit search for the configuration file in all supported locations (includes the sysconfdir).
+
 
 Version 5.28.0
 
